# edu_api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4136ba212ae3_init_migration.py  8308952040ce_init_migration.py  b9372254402e_add_status_to_registration.py  e1d47a492182_add_indexes.py
edu_register_api/: enums.py  main.py
edu_register_api/api/: auth.py  course.py  payment.py  test.py
edu_register_api/core/: config.py  database.py  decorators.py  depends.py  erros.py  redis.py  security.py  uow.py
edu_register_api/models/: __init__.py  base.py  course.py  course_registration.py  item.py  payment.py  registration.py  test.py  test_registration.py  user.py
edu_register_api/repositories/: __init__.py  base_repository.py  item_repository.py  payment_repository.py  registration_repository.py  user_repository.py
edu_register_api/schemas/: __init__.py  auth.py  common.py  course.py  payment.py  registration.py  test.py
edu_register_api/services/: __init__.py  auth_service.py  course_service.py  payment_service.py  registration_service.py  test_service.py
scripts/: create_seed_data.py
tests/: test_auth_service.py
tests/models/: test_payment.py  test_registration.py
tests/schemas/: test_login_request_schema.py  test_signup_request_schema.py
tests/services/: test_auth_service_login.py  test_auth_service_signup.py  test_payment_service.py  test_registration_service.py
